Add LICENSE, etc. to distribution archive and make the startup script work on Linux.